# sortix

./: .gitignore  LICENSE  Makefile  README  build-ports.sh  clean-ports.sh  compiler.mak  crosscompilemakefile.mak  dirs.mak  gpl.html  lgpl.html  platform.mak  version.mak
bench/: .gitignore  Makefile  benchctxswitch.c  benchctxswitch.cpp  benchsyscall.c  benchsyscall.cpp
build-aux/: build-ports.sh  clean-ports.sh  compiler.mak  dirs.mak  iso-grub-cfg.sh  iso-repository.sh  platform.mak  version.mak
carray/: Makefile  carray.c  carray.c++
disked/: .gitignore  Makefile  disked.8  disked.c
dispd/: .gitignore  Makefile
doc/: Makefile  cross-compilation-sins  cross-development  obsolete-stuff  portability-sins  porting-guide  posix-divergence  user-guide  welcome
editor/: .gitignore  Makefile  command.c  command.c++  command.h  command.h++  cursor.c  cursor.c++  cursor.h  cursor.h++  display.c  display.c++  display.h  display.h++  editor.1  editor.5  editor.c  editor.c++  editor.h  editor.h++  highlight.c  highlight.c++  highlight.h  highlight.h++  input.c  input.c++  input.h  input.h++  modal.c  modal.c++  modal.h  modal.h++  multibyte.c  multibyte.c++  multibyte.h  multibyte.h++  terminal.c  terminal.c++  terminal.h  terminal.h++
ext/: .gitignore  Makefile  block.cpp  block.h  blockgroup.cpp  blockgroup.h  device.cpp  device.h  ext-constants.h  ext-structs.h  extfs.cpp  extfs.h  filesystem.cpp  filesystem.h  fsmarshall.cpp  fsmarshall.h  fuse.cpp  fuse.h  inode.cpp  inode.h  ioleast.cpp  ioleast.h  util.h
games/: .gitignore  Makefile  aquatinspitz.c  aquatinspitz.cpp  asteroids.cpp  conway.cpp  pong.cpp  snake.cpp
hello/: .gitignore  Makefile  hello.c  hello.cpp
init/: Makefile  init.8  init.c  init.c++
kblayout/: .gitignore  Makefile  dk.kblayout  us.kblayout
kblayout-compiler/: .gitignore  Makefile  kblayout-compiler.c  kblayout.h
kernel/: .gitignore  Makefile  addralloc.cpp  alarm.cpp  alarm.h  ata.cpp  ata.h  bga.cpp  clock.cpp  com.cpp  com.h  copy.cpp  crc32.cpp  debugger.cpp  descriptor.cpp  dispmsg.cpp  dtable.cpp  elf.cpp  elf.h  end.cpp  fcache.cpp  fsfunc.cpp  hostname.cpp  hostname.h  identity.cpp  initrd.cpp  initrd.h  inode.cpp  interlock.cpp  interrupt.cpp  io.cpp  io.h  ioctx.cpp  kernel.cpp  kernelinfo.cpp  kthread.cpp  lfbtextbuffer.cpp  lfbtextbuffer.h  libk.cpp  linebuffer.cpp  (+48 more)
libc/: .gitignore  Makefile  SIG_DFL.cpp  SIG_ERR.cpp  SIG_IGN.cpp  _Exit.cpp  _assert.cpp  _exit.cpp  abort.cpp  abs.cpp  access.cpp  alarm.cpp  alarmns.cpp  atof.cpp  atoi.cpp  atol.cpp  atoll.cpp  basename.cpp  bsearch.cpp  c++.cpp  calloc.cpp  calltrace.cpp  canonicalize_file_name.cpp  canonicalize_file_name_at.cpp  chdir.cpp  chmod.cpp  chown.cpp  chroot.cpp  clearerr.cpp  clock.cpp  close.cpp  confstr.cpp  creat.cpp  ctime.cpp  ctype.c  dir.c  dirname.cpp  dispmsg_issue.cpp  div.cpp  dlfcn.cpp  (+278 more)
mxmpp/: .gitignore  Makefile  Makefile.in  README  config.h.in  configure.ac  mxmpp.cpp
(+2810 files in other folders)
